changes updated for the site..

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Shiv Puri Tripathi · शिव पुरी त्रिपाठी — Vedic Hindu Priest</title>
+  <title>Shiv Puri Tripathi — Vedic Hindu Priest</title>
   <meta name="description" content="Vedic Hindu Priest" />
   <meta name="theme-color" content="#f59e0b" />
   <link rel="stylesheet" href="styles.css" />
@@ -16,13 +16,13 @@
     <div class="container bar">
       <div class="brand">
         <span class="name">Shiv Puri Tripathi</span>
-        <span class="dev">शिव पुरी त्रिपाठी</span>
       </div>
       <nav class="nav">
-        <a href="#services">Services</a>
         <a href="#about">About</a>
+        <a href="#services">Services</a>
         <a href="#gallery">Gallery</a>
         <a href="#contact">Contact</a>
+        <a href="#donation">Donation</a>
       </nav>
       <div class="cta">
         <a href="#services" class="btn primary">Book Now</a>
@@ -33,123 +33,11 @@
 
   <main id="main">
     <!-- HERO, compact and two-column -->
-    <section class="hero">
-      <div class="container hero-grid">
-        <div class="hero-copy">
-          <h1>Traditional Vedic Puja & Sanskar Services</h1>
-          <p class="sub">Authentic mantras, clear guidance, and punctual service — with explanations in English/Hindi.
-          </p>
-          <ul class="badges">
-            <li>Vedic Priest</li>
-            <li>25+ years</li>
-            <li>Greater London</li>
-            <li>Sanskrit · Hindi · English</li>
-          </ul>
-          <div class="hero-actions">
-            <a class="btn primary" href="#services">Check Availability</a>
-            <a class="btn" href="#services">View Services</a>
-          </div>
-        </div>
-        <div class="hero-media">
-          <img src="assets/images/photo-1.jpg" alt="Ceremony image">
-          <div class="note">Wishing you and your family a blessed ceremony</div>
-        </div>
-      </div>
-    </section>
-
-    <!-- SERVICES -->
-    <section id="services" class="section">
-      <div class="container">
-        <h2 class="h2">Popular Ceremonies <small class="dv">पूजा एवं संस्कार</small></h2>
-        <div class="services-grid">
-
-          <article class='svc' aria-label='Griha Pravesh (गृह प्रवेश)'>
-            <div class='svc-head'>
-              <h3>Griha Pravesh (गृह प्रवेश)</h3>
-              <span class='price'>£251</span>
-            </div>
-            <p class='muted'>Duration: 2–3 hours</p>
-            <div class='svc-actions'>
-              <button class='btn sm outline scroll-to' data-target='#contact'>Enquire</button>
-              <div class='paypal-btn' data-amount='251' data-desc='Griha Pravesh (गृह प्रवेश) — Booking'></div>
-            </div>
-          </article>
-
-
-          <article class='svc' aria-label='Satyanarayan Katha (सत्यनारायण कथा)'>
-            <div class='svc-head'>
-              <h3>Satyanarayan Katha (सत्यनारायण कथा)</h3>
-              <span class='price'>£201</span>
-            </div>
-            <p class='muted'>Duration: 1.5–2 hours</p>
-            <div class='svc-actions'>
-              <button class='btn sm outline scroll-to' data-target='#contact'>Enquire</button>
-              <div class='paypal-btn' data-amount='201' data-desc='Satyanarayan Katha (सत्यनारायण कथा) — Booking'></div>
-            </div>
-          </article>
-
-
-          <article class='svc' aria-label='Ganesh Puja (गणेश पूजा)'>
-            <div class='svc-head'>
-              <h3>Ganesh Puja (गणेश पूजा)</h3>
-              <span class='price'>£151</span>
-            </div>
-            <p class='muted'>Duration: 1–1.5 hours</p>
-            <div class='svc-actions'>
-              <button class='btn sm outline scroll-to' data-target='#contact'>Enquire</button>
-              <div class='paypal-btn' data-amount='151' data-desc='Ganesh Puja (गणेश पूजा) — Booking'></div>
-            </div>
-          </article>
-
-
-          <article class='svc' aria-label='Mundan (चूडाकरण)'>
-            <div class='svc-head'>
-              <h3>Mundan (चूडाकरण)</h3>
-              <span class='price'>£151</span>
-            </div>
-            <p class='muted'>Duration: 1–1.5 hours</p>
-            <div class='svc-actions'>
-              <button class='btn sm outline scroll-to' data-target='#contact'>Enquire</button>
-              <div class='paypal-btn' data-amount='151' data-desc='Mundan (चूडाकरण) — Booking'></div>
-            </div>
-          </article>
-
-
-          <article class='svc' aria-label='Wedding Rituals (विवाह)'>
-            <div class='svc-head'>
-              <h3>Wedding Rituals (विवाह)</h3>
-              <span class='price'>£1101</span>
-            </div>
-            <p class='muted'>Duration: —</p>
-            <div class='svc-actions'>
-              <button class='btn sm outline scroll-to' data-target='#contact'>Enquire</button>
-              <div class='paypal-btn' data-amount='1101' data-desc='Wedding Rituals (विवाह) — Booking'></div>
-            </div>
-          </article>
-
-
-          <article class='svc' aria-label='Navagraha / Vastu Shanti (नवग्रह / वास्तु)'>
-            <div class='svc-head'>
-              <h3>Navagraha / Vastu Shanti (नवग्रह / वास्तु)</h3>
-              <span class='price'>£351</span>
-            </div>
-            <p class='muted'>Duration: 2–4 hours</p>
-            <div class='svc-actions'>
-              <button class='btn sm outline scroll-to' data-target='#contact'>Enquire</button>
-              <div class='paypal-btn' data-amount='351'
-                data-desc='Navagraha / Vastu Shanti (नवग्रह / वास्तु) — Booking'></div>
-            </div>
-          </article>
-
-        </div>
-      </div>
-    </section>
-
     <!-- ABOUT -->
-    <section id="about" class="section soft">
-      <div class="container about-grid">
+    <section id="about" class="hero">
+      <div class="container hero-grid">
         <div>
-          <h2 class="h2">About <small class="dv">परिचय</small></h2>
+          <h2 class="h2">About</h2>
           <p class="lead">With over 25 years of experience conducting Vedic pujas across the UK and abroad, Pandit ji
             blends tradition with clarity. Ceremonies are performed in Sanskrit, with step‑by‑step guidance in English
             or Hindi, ensuring your family understands and participates meaningfully.</p>
@@ -159,18 +47,104 @@
             <li>Bilingual explanations (English / Hindi)</li>
           </ul>
         </div>
-        <aside class="metrics">
-          <div class="metric"><span class="num">25+</span><span class="lbl">Years</span></div>
-          <div class="metric"><span class="num">1000+</span><span class="lbl">Ceremonies</span></div>
-          <div class="metric"><span class="num">UK</span><span class="lbl">Based</span></div>
-        </aside>
+        <div class="hero-media">
+          <img src="assets/images/photo-1.jpg" alt="Ceremony image">
+        </div>
       </div>
     </section>
+    <div class="section-divider">
+      <img src="assets/images/divider-diya.png" alt="Section Divider Diya">
+    </div>
+    <!-- Divider added -->
+    <!-- SERVICES -->
+    <section id="services" class="section">
+      <div class="container">
+        <h2 class="h2">Popular Ceremonies</h2>
+        <div class="services-grid">
+
+          <article class='svc' aria-label='Griha Pravesh'>
+            <div class='svc-head'>
+              <h3>Griha Pravesh </h3>
+              <p class="text-slate-600">Ritual for pacifiying the presiding divinities in our home environment, can be
+                performed at any time however, is usually performed at the time of entering a new home.</p>
+            </div>
+            <div class='svc-actions'>
+              <button class='btn primary' data-target='#contact'>Enquire</button>
+            </div>
+          </article>
+
+
+          <article class='svc' aria-label='Satyanarayan Katha'>
+            <div class='svc-head'>
+              <h3>Satyanarayan Katha</h3>
+              <p class="text-slate-600">A devotional narration and puja dedicated to Lord Vishnu for blessings, peace,
+                and prosperity.</p>
+            </div>
+            <div class='svc-actions'>
+              <button class='btn primary' data-target='#contact'>Enquire</button>
+            </div>
+          </article>
+
+
+          <article class='svc' aria-label='Ganesh Puja'>
+            <div class='svc-head'>
+              <h3>Ganesh Puja</h3>
+              <p class="text-slate-600">An invocation of Lord Ganesha to remove obstacles and bring success before any
+                auspicious event.</p>
+            </div>
+            <div class='svc-actions'>
+              <button class='btn primary' data-target='#contact'>Enquire</button>
+            </div>
+          </article>
+
+
+          <article class='svc' aria-label='Mundan'>
+            <div class='svc-head'>
+              <h3>Mundan</h3>
+              <p class="text-slate-600">A sacred head-shaving ceremony for children, signifying purification and
+                protection from past karmas.</p>
+            </div>
+            <div class='svc-actions'>
+              <button class='btn primary' data-target='#contact'>Enquire</button>
+            </div>
+          </article>
+
+
+          <article class='svc' aria-label='Wedding Rituals'>
+            <div class='svc-head'>
+              <h3>Wedding Rituals</h3>
+              <p class="text-slate-600">A series of Vedic rites uniting two souls, invoking divine blessings for a
+                harmonious married life.</p>
+            </div>
+            <div class='svc-actions'>
+              <button class='btn primary' data-target='#contact'>Enquire</button>
+            </div>
+          </article>
+
+
+          <article class='svc' aria-label='Navagraha / Vastu Shanti'>
+            <div class='svc-head'>
+              <h3>Navagraha / Vastu Shanti</h3>
+              <p class="text-slate-600">A ritual to appease the nine planets and harmonize the energies of a home for
+                well-being and peace.</p>
+            </div>
+            <div class='svc-actions'>
+              <button class='btn primary' data-target='#contact'>Enquire</button>
+            </div>
+          </article>
+
+        </div>
+      </div>
+    </section>
+    <div class="section-divider">
+      <img src="assets/images/divider-diya.png" alt="Section Divider Diya">
+    </div>
+    <!-- Divider added -->
 
     <!-- GALLERY (dense grid) -->
     <section id="gallery" class="section">
       <div class="container">
-        <h2 class="h2">Gallery <small class="dv">छायाचित्र</small></h2>
+        <h2 class="h2">Gallery</h2>
         <div class="gallery-grid">
           <figure class='thumb'><img src='assets/images/photo-2.jpg' alt='Ceremony photo'>
             <figcaption></figcaption>
@@ -187,12 +161,15 @@
         </div>
       </div>
     </section>
-
+    <div class="section-divider">
+      <img src="assets/images/divider-diya.png" alt="Section Divider Diya">
+    </div>
+    <!-- Divider added -->
     <!-- CONTACT -->
     <section id="contact" class="section soft">
       <div class="container contact-grid">
         <div class="card">
-          <h2 class="h2">Get in Touch <small class="dv">संपर्क</small></h2>
+          <h2 class="h2">Get in Touch</h2>
           <p>You can call, email, WhatsApp, or visit for bookings and enquiries.</p>
           <ul class="contact">
             <li>📞 <a href='tel:+447740048096'>+447740048096</a></li>
@@ -200,10 +177,6 @@
             <li>💬 <a target='_blank' href='https://wa.me/447740048096'>WhatsApp</a></li>
             <li>📍 99 Thorncliffe Rd, Norwood Green, Southall, UB2 5RN</li>
           </ul>
-          <div class="paypal-donate">
-            <h3>Offer Dakshina</h3>
-            <div id="paypal-donate"></div>
-          </div>
         </div>
         <div class="map card">
           <iframe src='https://www.google.com/maps?q=99+Thorncliffe+Rd,+Norwood+Green,+Southall,+UB2+5RN&output=embed'
@@ -212,17 +185,48 @@
         </div>
       </div>
     </section>
+    <div class="section-divider">
+      <img src="assets/images/divider-diya.png" alt="Section Divider Diya">
+    </div>
+    <!-- Divider added -->
+    <!-- Donation -->
+    <section id="donation" class="section soft">
+      <div class="container donation-grid">
+        <div class="card enhanced-donation-card">
+          <h2 class="h2">🙏 Support Our Work</h2>
+          <p>
+            Your donations help us continue performing traditional Vedic rituals, support community services,
+            and preserve our cultural heritage. Every contribution makes a difference.
+          </p>
+
+          <form action="https://www.paypal.com/donate" method="post" target="_blank">
+            <input type="hidden" name="business" value="your-paypal-email@example.com" />
+            <input type="hidden" name="currency_code" value="GBP" />
+            <button type="submit" class="paypal-button">
+              <img src="https://www.paypalobjects.com/en_US/i/btn/btn_donate_LG.gif" alt="Donate with PayPal">
+            </button>
+          </form>
+
+          <p class="secure-note">Secure donations via PayPal. Debit or credit cards accepted.</p>
+        </div>
+      </div>
+    </section>
+    <div class="section-divider">
+      <img src="assets/images/divider-diya.png" alt="Section Divider Diya">
+    </div>
+    <!-- Divider added -->
   </main>
 
   <footer class="footer">
     <div class="container foot">
-      <div>© <span id="year"></span> Shiv Puri Tripathi · शिव पुरी त्रिपाठी</div>
-      <div class="dv">सर्वे भवंतु सुखिनः · May all be happy</div>
+      <div>© <span id="year"></span> Shiv Puri Tripathi</div>
+      <div class="dv">May all be happy</div>
     </div>
   </footer>
 
   <!-- PayPal SDK (Sandbox). Replace client-id=sb with live client ID when going live. -->
-  <script src="https://www.paypal.com/sdk/js?client-id=sb&currency=GBP"
+  <script
+    src="https://www.paypal.com/sdk/js?client-id=AV1iHIzYjAcne09svEuV-iiORreJdvZ8EZvNeeJJtwiZNfxoXdulESYtRZVdFdxUCHFNzvrguCVtjMCn&currency=GBP"
     data-sdk-integration-source="button-factory"></script>
   <script src="script.js"></script>
 </body>
