updated lightbox desgin

--- a/index.html
+++ b/index.html
@@ -159,6 +159,7 @@
             <figcaption></figcaption>
           </figure>
         </div>
+        <a href="gallery.html" class="btn btn-primary">View More</a>
       </div>
     </section>
     <div class="section-divider">
