--- a/gallery.html
+++ b/gallery.html
@@ -71,25 +71,28 @@
     }
 
     /* Grid like the reference site */
-.gallery-grid {
-  display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
-  gap: 12px; /* tighter spacing */
-}
+    .gallery-grid {
+      display: grid;
+      grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+      gap: 12px;
+      /* tighter spacing */
+    }
 
-.gallery-grid .grid-item {
-  background: #fff;
-  border: 1px solid #ddd;
-  border-radius: 4px;
-  overflow: hidden;
-}
+    .gallery-grid .grid-item {
+      background: #fff;
+      border: 1px solid #ddd;
+      border-radius: 4px;
+      overflow: hidden;
+    }
 
-.gallery-grid img {
-  width: 100%;
-  height: 250px;      /* fixed uniform height */
-  object-fit: cover;  /* crops to keep proportions */
-  display: block;
-}
+    .gallery-grid img {
+      width: 100%;
+      height: 250px;
+      /* fixed uniform height */
+      object-fit: cover;
+      /* crops to keep proportions */
+      display: block;
+    }
 
 
     /* Card */
