--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Shiv Puri Tripathi — Vedic Hindu Priest</title>
-  <meta name="description" content="Vedic Hindu Priest" />
+  <title>Shiv Sai Seva Trust</title>
+  <meta name="description" content="Shiv Sai Seva Trust" />
   <meta name="theme-color" content="#f59e0b" />
   <link rel="stylesheet" href="styles.css" />
   <link rel="preload" href="styles.css" as="style" />
@@ -15,7 +15,7 @@
   <header class="topbar">
     <div class="container bar">
       <div class="brand">
-        <span class="name">Shiv Puri Tripathi</span>
+        <span class="name">Shiv Sai Seva Trust</span>
       </div>
       <nav class="nav">
         <a href="#about">About</a>
@@ -220,7 +220,7 @@
 
   <footer class="footer">
     <div class="container foot">
-      <div>© <span id="year"></span> Shiv Puri Tripathi</div>
+      <div>© <span id="year"></span> Shiv Sai Seva Trust</div>
       <div class="dv">May all be happy</div>
     </div>
   </footer>
