Changes as per Pundithji

--- a/index.html
+++ b/index.html
@@ -14,22 +14,35 @@
 <body>
   <header class="topbar">
     <div class="container bar">
+      <!-- Left side: Ganesha -->
       <div class="brand">
+        <img src="assets/images/ganesha.png" alt="Lord Ganesha" class="logo-img">
         <span class="name">Shiv Sai Seva Trust</span>
       </div>
+
+
+      <!-- Navigation -->
       <nav class="nav">
         <a href="#about">About</a>
         <a href="#services">Services</a>
+        <a href="#ceremonies">Ceremonies</a>
         <a href="#gallery">Gallery</a>
         <a href="#contact">Contact</a>
         <a href="#donation">Donation</a>
       </nav>
+
       <div class="cta">
         <a href="#services" class="btn primary">Book Now</a>
-        <a class='btn outline' href='tel:+447740048096'>Call</a>
+        <a class="btn outline" href="tel:+447740048096">Call</a>
+      </div>
+
+      <!-- Right side: Lakshmi -->
+      <div class="brand right-logo">
+        <img src="assets/images/lakshmi.png" alt="Lakshmi Devi" class="logo-img">
       </div>
     </div>
   </header>
+
 
   <main id="main">
     <!-- HERO, compact and two-column -->
@@ -37,15 +50,30 @@
     <section id="about" class="hero">
       <div class="container hero-grid">
         <div>
-          <h2 class="h2">About</h2>
-          <p class="lead">With over 25 years of experience conducting Vedic pujas across the UK and abroad, Pandit ji
-            blends tradition with clarity. Ceremonies are performed in Sanskrit, with step‑by‑step guidance in English
-            or Hindi, ensuring your family understands and participates meaningfully.</p>
+          <h2 class="h2">Shiv Sai Seva Trust</h2>
+          <p class="lead">Shiv Sai Seva Trust is a charitable organisation dedicated to serving humanity with
+            compassion, faith, and devotion. Our mission is to support communities through spiritual, social, and
+            humanitarian initiatives.
+            We organise regular satsangs, bhajans, and religious events to promote spiritual growth and unity. Beyond
+            spiritual service, the Trust is committed to social welfare activities such as:
           <ul class="ticks">
-            <li>Authentic Vedic mantras and procedures</li>
-            <li>Clear guidance for families & guests</li>
-            <li>Bilingual explanations (English / Hindi)</li>
-          </ul>
+            <li> Providing food (bhojan) for the needy</li>
+            <li> Supporting education for underprivileged children</li>
+            <li> Offering accommodation for sadhus and devotees</li>
+            <li> Assisting families during marriages and cultural ceremonies</li>
+            Our vision is to create a society where love, service, and devotion uplift every individual. With the
+            blessings of Shiv and Sai, and the support of our volunteers and donors, we continue to expand our
+            initiatives to bring positive change in people’s lives.
+            </p>
+            <h2 class="h2">Punditji's Profile</h2>
+            <p class="lead">With over 25 years of experience conducting Vedic pujas across the UK and abroad, Pandit ji
+              blends tradition with clarity. Ceremonies are performed in Sanskrit, with step‑by‑step guidance in English
+              or Hindi, ensuring your family understands and participates meaningfully.</p>
+            <ul class="ticks">
+              <li>Authentic Vedic mantras and procedures</li>
+              <li>Clear guidance for families & guests</li>
+              <li>Bilingual explanations (English / Hindi)</li>
+            </ul>
         </div>
         <div class="hero-media">
           <img src="assets/images/photo-1.jpg" alt="Ceremony image">
@@ -59,6 +87,192 @@
     <!-- SERVICES -->
     <section id="services" class="section">
       <div class="container">
+        <h2 class="h2">Sixteen Samskaras</h2>
+        <!-- Pre-Natal Samskaras -->
+        <h3 class="samskara-subheading">👶 Pre-Natal Samskaras</h3>
+        <div class="services-grid">
+          <article class="svc">
+            <div class="svc-head">
+              <h4>Garbhadhana</h4>
+              <p class="text-slate-600">Performed at conception to ensure a healthy pregnancy and spiritual well-being.
+              </p>
+            </div>
+            <div class='svc-actions'>
+              <a class='btn primary' href="tel:+447740048096">Enquire</a>
+            </div>
+          </article>
+
+          <article class="svc">
+            <div class="svc-head">
+              <h4>Pumsavana</h4>
+              <p class="text-slate-600">A ritual in the 3rd or 4th month of pregnancy for protection of the fetus.</p>
+            </div>
+            <div class='svc-actions'>
+              <a class='btn primary' href="tel:+447740048096">Enquire</a>
+            </div>
+          </article>
+
+          <article class="svc">
+            <div class="svc-head">
+              <h4>Simantonayana</h4>
+              <p class="text-slate-600">Pregnancy ritual for the mother’s wishes and well-being of both mother and
+                child.</p>
+            </div>
+            <div class='svc-actions'>
+              <a class='btn primary' href="tel:+447740048096">Enquire</a>
+            </div>
+          </article>
+        </div>
+
+        <!-- Childhood Samskaras -->
+        <h3 class="samskara-subheading">🧒 Childhood Samskaras</h3>
+        <div class="services-grid">
+          <article class="svc">
+            <div class="svc-head">
+              <h4>Jatakarma</h4>
+              <p class="text-slate-600">Performed immediately after birth to welcome and bless the newborn.</p>
+            </div>
+            <div class='svc-actions'>
+              <a class='btn primary' href="tel:+447740048096">Enquire</a>
+            </div>
+          </article>
+
+          <article class="svc">
+            <div class="svc-head">
+              <h4>Namakarana</h4>
+              <p class="text-slate-600">The naming ceremony, when the child receives their first name.</p>
+            </div>
+            <div class='svc-actions'>
+              <a class='btn primary' href="tel:+447740048096">Enquire</a>
+            </div>
+          </article>
+
+          <article class="svc">
+            <div class="svc-head">
+              <h4>Nishkramana</h4>
+              <p class="text-slate-600">The child’s first outing, symbolizing the beginning of life’s journey.</p>
+            </div>
+            <div class='svc-actions'>
+              <a class='btn primary' href="tel:+447740048096">Enquire</a>
+            </div>
+          </article>
+
+          <article class="svc">
+            <div class="svc-head">
+              <h4>Annaprashana</h4>
+              <p class="text-slate-600">The ritual of giving solid food to the child for the first time.</p>
+            </div>
+            <div class='svc-actions'>
+              <a class='btn primary' href="tel:+447740048096">Enquire</a>
+            </div>
+          </article>
+
+          <article class="svc">
+            <div class="svc-head">
+              <h4>Chudakarma (Chaul)</h4>
+              <p class="text-slate-600">The first haircut, symbolizing purification and new growth.</p>
+            </div>
+            <div class='svc-actions'>
+              <a class='btn primary' href="tel:+447740048096">Enquire</a>
+            </div>
+          </article>
+
+          <article class="svc">
+            <div class="svc-head">
+              <h4>Karnavedh</h4>
+              <p class="text-slate-600">Piercing of the ears, believed to enhance intellect and immunity.</p>
+            </div>
+            <div class='svc-actions'>
+              <a class='btn primary' href="tel:+447740048096">Enquire</a>
+            </div>
+          </article>
+        </div>
+
+        <!-- Educational Samskaras -->
+        <h3 class="samskara-subheading">📖 Educational Samskaras</h3>
+        <div class="services-grid">
+          <article class="svc">
+            <div class="svc-head">
+              <h4>Vidyarambha</h4>
+              <p class="text-slate-600">Beginning of formal studies, including learning the alphabet.</p>
+            </div>
+            <div class='svc-actions'>
+              <a class='btn primary' href="tel:+447740048096">Enquire</a>
+            </div>
+          </article>
+
+          <article class="svc">
+            <div class="svc-head">
+              <h4>Upanayana</h4>
+              <p class="text-slate-600">The sacred thread ceremony, initiation into spiritual and adult life.</p>
+            </div>
+            <div class='svc-actions'>
+              <a class='btn primary' href="tel:+447740048096">Enquire</a>
+            </div>
+          </article>
+
+          <article class="svc">
+            <div class="svc-head">
+              <h4>Vedarambha</h4>
+              <p class="text-slate-600">The commencement of formal Vedic studies under a guru.</p>
+            </div>
+            <div class='svc-actions'>
+              <a class='btn primary' href="tel:+447740048096">Enquire</a>
+            </div>
+          </article>
+
+          <article class="svc">
+            <div class="svc-head">
+              <h4>Keshant (Godaan)</h4>
+              <p class="text-slate-600">A coming-of-age ritual, often marked by shaving the beard.</p>
+            </div>
+            <div class='svc-actions'>
+              <a class='btn primary' href="tel:+447740048096">Enquire</a>
+            </div>
+          </article>
+
+          <article class="svc">
+            <div class="svc-head">
+              <h4>Samavartan</h4>
+              <p class="text-slate-600">Graduation ceremony marking completion of education and student life.</p>
+            </div>
+            <div class='svc-actions'>
+              <a class='btn primary' href="tel:+447740048096">Enquire</a>
+            </div>
+          </article>
+        </div>
+
+        <!-- Adult Life & Death Samskaras -->
+        <h3 class="samskara-subheading">🌸 Adult Life & Death Samskaras</h3>
+        <div class="services-grid">
+          <article class="svc">
+            <div class="svc-head">
+              <h4>Vivaha</h4>
+              <p class="text-slate-600">The sacred marriage ceremony, uniting two souls in dharma.</p>
+            </div>
+            <div class='svc-actions'>
+              <a class='btn primary' href="tel:+447740048096">Enquire</a>
+            </div>
+          </article>
+
+          <article class="svc">
+            <div class="svc-head">
+              <h4>Antyeshti</h4>
+              <p class="text-slate-600">Final rites after death, ensuring the soul’s peaceful journey onward.</p>
+            </div>
+            <div class='svc-actions'>
+              <a class='btn primary' href="tel:+447740048096">Enquire</a>
+            </div>
+          </article>
+        </div>
+      </div>
+    </section>
+
+    <div class="section-divider">
+      <img src="assets/images/divider-diya.png" alt="Section Divider Diya">
+    </div>
+    <section id="ceremonies" class="section">
+      <div class="container">
         <h2 class="h2">Popular Ceremonies</h2>
         <div class="services-grid">
 
@@ -69,7 +283,7 @@
                 performed at any time however, is usually performed at the time of entering a new home.</p>
             </div>
             <div class='svc-actions'>
-              <button class='btn primary' data-target='#contact'>Enquire</button>
+              <a class='btn primary' href="tel:+447740048096">Enquire</a>
             </div>
           </article>
 
@@ -81,7 +295,7 @@
                 and prosperity.</p>
             </div>
             <div class='svc-actions'>
-              <button class='btn primary' data-target='#contact'>Enquire</button>
+              <a class='btn primary' href="tel:+447740048096">Enquire</a>
             </div>
           </article>
 
@@ -93,7 +307,7 @@
                 auspicious event.</p>
             </div>
             <div class='svc-actions'>
-              <button class='btn primary' data-target='#contact'>Enquire</button>
+              <a class='btn primary' href="tel:+447740048096">Enquire</a>
             </div>
           </article>
 
@@ -105,7 +319,7 @@
                 protection from past karmas.</p>
             </div>
             <div class='svc-actions'>
-              <button class='btn primary' data-target='#contact'>Enquire</button>
+              <a class='btn primary' href="tel:+447740048096">Enquire</a>
             </div>
           </article>
 
@@ -117,7 +331,7 @@
                 harmonious married life.</p>
             </div>
             <div class='svc-actions'>
-              <button class='btn primary' data-target='#contact'>Enquire</button>
+              <a class='btn primary' href="tel:+447740048096">Enquire</a>
             </div>
           </article>
 
@@ -129,7 +343,7 @@
                 well-being and peace.</p>
             </div>
             <div class='svc-actions'>
-              <button class='btn primary' data-target='#contact'>Enquire</button>
+              <a class='btn primary' href="tel:+447740048096">Enquire</a>
             </div>
           </article>
 
@@ -159,7 +373,9 @@
             <figcaption></figcaption>
           </figure>
         </div>
-        <a href="gallery.html" class="btn btn-primary">View More</a>
+        <div style="display: flex; justify-content: flex-end; align-items: center; margin-top: 10px;">
+          <a href="gallery.html" class="btn primary">View More</a>
+        </div>
       </div>
     </section>
     <div class="section-divider">
