--- a/index.html
+++ b/index.html
@@ -17,9 +17,14 @@
       <!-- Left side: Ganesha -->
       <div class="brand">
         <img src="assets/images/ganesha.png" alt="Lord Ganesha" class="logo-img">
-        <span class="name">Shiv Sai Seva Trust</span>
+        <div class="brand-text">
+          <span class="name">Shiv Sai Seva Trust</span>
+          <span class="charity">Charity number: 1089830</span>
+        </div>
       </div>
 
+      <!-- Hamburger button (only visible on mobile) -->
+      <button class="menu-toggle" aria-label="Toggle Menu">☰</button>
 
       <!-- Navigation -->
       <nav class="nav">
@@ -42,6 +47,7 @@
       </div>
     </div>
   </header>
+
 
 
   <main id="main">
